--- a/.github/actions/publish-docker/action.yml
+++ b/.github/actions/publish-docker/action.yml
@@ -32,6 +32,7 @@ runs:
   using: "composite"
   steps:
     - name: Login to GAR
+      if: github.event_name != 'pull_request'
       uses: docker/login-action@v3
       # use service account flow defined at: https://github.com/docker/login-action#service-account-based-authentication-1
       with:
