--- a/kork/spinnaker-dependencies/spinnaker-dependencies.gradle
+++ b/kork/spinnaker-dependencies/spinnaker-dependencies.gradle
@@ -51,6 +51,10 @@ dependencies {
    // 2.16.0 is subject to CVE-2021-45105.  2.17.0 is subject to CVE-2021-44832, so use >= 2.17.1.
   api(platform("org.apache.logging.log4j:log4j-bom:2.20.0"))
 
+  // Springdoc includes a newer version of Jackson, which conflicts with the SnakeYaml pin below
+  // Jackson 2.15+ requires SnakeYaml 2.x, last Jackson version with SnakeYaml 1.31 compat is 2.14.0
+  api(enforcedPlatform("com.fasterxml.jackson:jackson-bom:2.14.0"))
+
   //kotlinVersion comes from gradle.properties since we have kotlin code in
   // this project and need to configure gradle plugins etc.
   api(platform(libs.kotlin.bom))
