--- a/.github/workflows/clouddriver.yml
+++ b/.github/workflows/clouddriver.yml
@@ -3,7 +3,26 @@ run-name: Clouddriver ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
   workflow_call:
+    inputs:
+      publish-containers:
+        description: Publish containers
+        default: true
+      publish-debs:
+        description: Publish debs
+        default: true
+      version-override:
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
+
   workflow_dispatch:
+    inputs:
+      publish-containers:
+        description: Publish containers
+        default: true
+      publish-debs:
+        description: Publish debs
+        default: true
+      version-override:
+        description: Overrides the version for artifacts (e.g. "1.37.1").  Otherwise, uses the auto-incrementing build number for the current branch.
 
   push:
     branches:
@@ -32,5 +51,8 @@ jobs:
         with:
           project: clouddriver
           publish: ${{ github.event_name != 'pull_request' }}
+          publish-containers: ${{ inputs.publish-containers || true }}
+          publish-debs: ${{ inputs.publish-debs || true }}
+          version-override: ${{ github.event_name == 'workflow_call' && inputs.version-override || '' }}
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
