--- a/.github/workflows/keel.yml
+++ b/.github/workflows/keel.yml
@@ -3,6 +3,16 @@ run-name: Keel ${{ github.ref_name }} (${{ github.event_name }})
 
 on:
   workflow_call:
+    inputs:
+      publish-containers:
+        description: Publish containers
+        default: true
+      publish-debs:
+        description: Publish debs
+        default: true
+      version-override:
+        description: Overrides the version for artifacts
+
   workflow_dispatch:
 
   push:
@@ -32,8 +42,10 @@ jobs:
         with:
           project: keel
           publish: ${{ github.event_name != 'pull_request' }}
+          publish-containers: ${{ github.event_name != 'workflow_call' && true || inputs.publish-containers }}
+          publish-debs: ${{ github.event_name != 'workflow_call' && true || inputs.publish-debs }}
+          version-override: ${{ github.event_name == 'workflow_call' && inputs.version-override || '' }}
           publish-halconfig: false
           integration-test: false
-          gradle-opts: '-Dorg.gradle.daemon=false -Xmx12g -Xms12g'
           github-token: ${{ secrets.GITHUB_TOKEN }}
           gar-json-key: ${{ secrets.GAR_JSON_KEY }}
